--- a/PacemakerEpisodeStatistics/app/src/main/AndroidManifest.xml
+++ b/PacemakerEpisodeStatistics/app/src/main/AndroidManifest.xml
@@ -27,5 +27,8 @@
             android:exported="false" >
         </service>
     </application>
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"></uses-permission>
 
 </manifest>
